@@ -139,11 +139,11 @@ int pl_representation_min_integer;
 int pl_representation_integer_32bits;
 int pl_representation_too_many_variables;	/* for Pl_Copy_Term(),... */
 
-int pl_evluation_float_overflow;
-int pl_evluation_int_overflow;
-int pl_evluation_undefined;
-int pl_evluation_underflow;
-int pl_evluation_zero_divisor;
+int pl_evaluation_float_overflow;
+int pl_evaluation_int_overflow;
+int pl_evaluation_undefined;
+int pl_evaluation_underflow;
+int pl_evaluation_zero_divisor;
 
 
 int pl_resource_print_object_not_linked; 	/* for print and format */
@@ -245,11 +245,11 @@ extern int pl_representation_integer_32bits;
 extern int pl_representation_too_many_variables;/* for Pl_Copy_Term(),... */
 
 
-extern int pl_evluation_float_overflow;
-extern int pl_evluation_int_overflow;
-extern int pl_evluation_undefined;
-extern int pl_evluation_underflow;
-extern int pl_evluation_zero_divisor;
+extern int pl_evaluation_float_overflow;
+extern int pl_evaluation_int_overflow;
+extern int pl_evaluation_undefined;
+extern int pl_evaluation_underflow;
+extern int pl_evaluation_zero_divisor;
 
 
 extern int resource_too_many_open_streams; 	/* for streams */
