@@ -1,5 +1,6 @@
 Change in GNU Prolog version 1.4.6
 
+* update ports to windows (32 and 64 bits with MSVC and masys2/mingw64)
 * port to arm/Linux (32 bits=armv7 and 64 bits=aarch64) - many thanks to
   Jasper Taylor <jasper@simulistics.com>
 * fix problem with gcc 10 which needs explicitly -fcommon
